@@ -7,6 +7,7 @@ com.fasterxml.jackson:jackson-bom=2.14.1
 com.fasterxml.woodstox:woodstox-core=6.4.0
 com.github.ben-manes.caffeine:caffeine=3.1.2
 com.github.spotbugs:*=4.7.2
+com.github.stephenc.jcip:jcip-annotations=1.0-1
 com.google.cloud:google-cloud-bom=0.184.0
 com.google.errorprone:*=2.16
 com.google.guava:guava=31.1-jre
